1999-09-10  Martin Baulig  <martin@home-of-linux.org>

	* gtkdoc.dsl.in ($generate-chapter-toc$): Return #t, not #f.

1999-09-09  Martin Baulig  <martin@home-of-linux.org>

	* gtkdoc-scan.in (ScanHeader): Don't force typedefs and other
	things to start in column 0; allow some spaces in front of them.
	Output `typedef struct { ... } name' structs as typedef, not as
	structure.

1999-09-08  Martin Baulig  <martin@home-of-linux.org>

	* gtkdoc-mkdb.in (CreateValidSGMLID): `s/::/-/g;' for CORBA objects.

1999-08-22  Erik Walthinsen  <omega@cse.ogi.edu>

	* gtkdoc-scan.in: modified so it will find any Class, not just Gtk
	and Gnome classes.  Introduces the possibility of extraneous Class
	definitions (verified), which should be pruned somehow (haven't
	analyzed the false positive yet).

1999-08-22  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtkdoc-mktmpl.in: 
	* gtkdoc-mkdb.in: a few fixes to ParseStructDeclaration. It still
	has problems with nested structs/unions like those which occur in
	gtkclist.h and gtktypeutils.h.

	* configure.in: removed gtk-doc.spec from AC_OUTPUT, as	whoever wrote
	this forgot to add gtk-doc.spec.in to CVS.
	* Makefile.am: commented out gtk-doc.spec.

Wed Aug 18 03:55:30 1999  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mktmpl.in: Propagate fix from gtkdoc-mkdb.in.
	:-(; need to libraryize, need to libraryize.

Wed Aug 18 03:55:30 1999  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkdb.in: Fix bug that was preventing
	structure field definitions from being output.

Wed Aug 18 23:25:23 1999  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Add /usr/lib/sgml/stylesheet to list
	of stylesheet directories. (Found in recent Debian
	packages)

1999-08-15  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtkdoc-mkdb.in: Output $decl_out as the struct rather than the
	original $declaration.

1999-08-12  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtkdoc-mkdb.in: 
	* gtkdoc-mktmpl.in: Added special case in ParseEnumDeclaration to